--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <img id="uploadedImage" src="" alt="Preview">
             
             <div class="file-url-box">
-                <a id="fileUrl" href="" target="_blank"></a>
+                <a id="fileUrl" href="" target="_blank" rel="noopener noreferrer"></a>
             </div>
 
             <div class="share-buttons">
