--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
 
         <h2>Cloud Storage</h2>
-        <p class="subtitle">Upload file Anda dengan mudah dan aman</p>
+        <p class="subtitle">Upload file Anda dengan mudah dan aman (Hilang setelah 5 hari)</p>
         
         <div class="tab-buttons">
             <button class="tab-btn active" onclick="switchTab('file')">📁 Upload File</button>
