--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="https://cdn.jsdelivr.net/npm/appwrite@14.0.1"></script>
     <link rel="stylesheet" href="./style.css" />
 
+    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/soraxpl/soraxpl.github.io/refs/heads/master/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/soraxpl/soraxpl.github.io/refs/heads/master/favicon.ico">
+
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' https://cloud.appwrite.io https://api.qrserver.com; frame-src 'none'; object-src 'none';">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta http-equiv="X-Frame-Options" content="DENY">
