--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/soraxpl/soraxpl.github.io/refs/heads/master/favicon.ico">
     <link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/soraxpl/soraxpl.github.io/refs/heads/master/favicon.ico">
 
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' https://cloud.appwrite.io https://api.qrserver.com; frame-src 'none'; object-src 'none';">
-    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' https: https://cloud.appwrite.io https://api.qrserver.com; frame-src 'none'; object-src 'none';">    <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta http-equiv="X-Frame-Options" content="DENY">
     <meta name="referrer" content="strict-origin-when-cross-origin">
 
