--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 
     <script
       src="https://cdn.jsdelivr.net/npm/appwrite@21.5.0"
-      async
+      defer
       crossorigin
     ></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"
-      async
+      defer
       crossorigin
     ></script>
 
@@ -65,7 +65,7 @@
 
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' https: https://cloud.appwrite.io https://api.qrserver.com; frame-src 'none'; object-src 'none';"
+      content="default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' https: https://cloud.appwrite.io https://api.qrserver.com; frame-src 'none'; object-src 'none';"
     />
     <meta http-equiv="X-Content-Type-Options" content="nosniff" />
     <meta name="referrer" content="strict-origin-when-cross-origin" />
@@ -123,13 +123,6 @@
     <!-- Meta Tags Generated via https://github.com/Xnuvers007/Meta-Generator -->
 
     <link rel="manifest" href="./manifest.json" />
-
-    <link
-      rel="preload"
-      href="https://raw.githubusercontent.com/soraxpl/soraxpl.github.io/refs/heads/master/favicon.ico"
-      as="image"
-      type="image/x-icon"
-    />
   </head>
   <body>
     <button
