--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
 
     <script
       src="https://cdn.jsdelivr.net/npm/appwrite@21.5.0"
+      crossorigin
     ></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"
+      crossorigin
     ></script>
 
     <link rel="stylesheet" href="./style.css" />
