--- a/index.html
+++ b/index.html
@@ -123,6 +123,87 @@
     <link rel="manifest" href="./manifest.json" />
   </head>
   <body>
+
+    <noscript>
+    <style>
+      .noscript-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
+        color: #ffffff;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        z-index: 999999;
+        font-family: 'Segoe UI', system-ui, -apple-system, sans-serif;
+        text-align: center;
+        padding: 20px;
+      }
+      .noscript-card {
+        background: rgba(255, 255, 255, 0.05);
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(10px);
+        padding: 40px;
+        border-radius: 16px;
+        max-width: 450px;
+        box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
+      }
+      .noscript-icon {
+        width: 64px;
+        height: 64px;
+        margin-bottom: 20px;
+        color: #ef4444; /* Warna Merah Warning */
+      }
+      .noscript-title {
+        font-size: 24px;
+        font-weight: 700;
+        margin-bottom: 10px;
+        background: linear-gradient(to right, #fff, #cbd5e1);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
+      .noscript-msg {
+        font-size: 16px;
+        line-height: 1.6;
+        color: #94a3b8;
+        margin-bottom: 30px;
+      }
+      .noscript-btn {
+        display: inline-block;
+        background: #10b981; /* Warna Hijau tema kamu */
+        color: white;
+        text-decoration: none;
+        padding: 12px 24px;
+        border-radius: 8px;
+        font-weight: 600;
+        transition: transform 0.2s, background 0.2s;
+      }
+      .noscript-btn:hover {
+        background: #059669;
+        transform: translateY(-2px);
+      }
+    </style>
+
+    <div class="noscript-overlay">
+      <div class="noscript-card">
+        <svg class="noscript-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
+        </svg>
+        
+        <h1 class="noscript-title">JavaScript Diperlukan</h1>
+        <p class="noscript-msg">
+          Aplikasi Cloud Storage membutuhkan JavaScript untuk mengelola enkripsi, upload file, dan koneksi ke server. Mohon aktifkan JavaScript di browser Anda.
+        </p>
+        
+        <a href="." class="noscript-btn">Muat Ulang Halaman</a>
+      </div>
+    </div>
+  </noscript>
+
     <button
       class="dark-mode-toggle"
       onclick="toggleDarkMode()"
@@ -177,7 +258,7 @@
 
       <h2>Cloud Storage</h2>
       <p class="subtitle">
-        Upload file Anda dengan mudah dan aman (Hilang setelah 5 hari)
+        Upload file Anda dengan mudah dan aman (Hilang setelah 8 hari)
       </p>
 
       <div class="pwa-banner" id="pwaBanner" style="display: none">
