--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
         margin-bottom: 10px;
         background: linear-gradient(to right, #fff, #cbd5e1);
         -webkit-background-clip: text;
+        background-clip: text;
         -webkit-text-fill-color: transparent;
       }
       .noscript-msg {
